<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.DetailAlbumActivity"
    android:id="@+id/detailAlbum">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VinilosApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/Widget.AppTheme.Toolbar"
            app:popupTheme="@style/Theme.VinilosApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="90">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.104"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/detail_album_description_image" />

            <TextView
                android:id="@+id/textLabelArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/artist_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textContentArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/black"
                app:layout_constraintBaseline_toBaselineOf="@+id/textLabelArtist"
                app:layout_constraintStart_toEndOf="@+id/textLabelArtist"
                tools:text="Name Artists" />


            <TextView
                android:id="@+id/textLabelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/date_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLabelArtist" />

            <TextView
                android:id="@+id/textContentDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                app:layout_constraintBaseline_toBaselineOf="@+id/textLabelDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textLabelDate"
                tools:text="2021-11-07" />

            <TextView
                android:id="@+id/textLabelGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/genre_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLabelDate" />

            <TextView
                android:id="@+id/textContentGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                app:layout_constraintBaseline_toBaselineOf="@+id/textLabelGenre"
                app:layout_constraintStart_toEndOf="@+id/textLabelGenre"
                tools:text="Pop Rock Latino " />

            <TextView
                android:id="@+id/textLabelRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/record_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContentGenre" />

            <TextView
                android:id="@+id/textContentRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                app:layout_constraintBaseline_toBaselineOf="@+id/textLabelRecord"
                app:layout_constraintStart_toEndOf="@+id/textLabelRecord"
                tools:text="Uniandes Disc" />

            <TextView
                android:id="@+id/textLabelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/description_label"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLabelRecord" />

            <TextView
                android:id="@+id/textContentDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textLabelDescription"
                app:layout_constraintTop_toBottomOf="@+id/textLabelDescription"
                tools:text="Descripcion orem ipsum dolor sit amet consectetur adipiscing elit himenaeos nunc dictum, lacus sed penatibus tempor fringilla sociis posuere curabitur semper, ornare nisi conubia habitasse dignissim congue varius tempus suspendisse. Eleifend torquent praesent leo porta et lacinia a, ridiculus molestie odio iaculis montes luctus nullam, enim malesuada aliquet eget nisl arcu. Rhoncus senectus aliquam id convallis ligula auctor orci suscipit, pharetra cubilia mi mollis porttitor quisque platea nec lobortis, euismod proin gravida sem sapien bibendum hendrerit. Laoreet tortor velit vulputate nam dis eros fames massa, maecenas duis felis magnis lectus pellentesque vitae parturient quis, mattis vivamus venenatis eu purus in class. " />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>