<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.DetailCollectorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VinilosApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.VinilosApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="90">

            <TextView
                android:id="@+id/textCollectorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/detail_collector_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textCollectorNameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="223dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/textCollectorName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textCollectorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:text="@string/detail_collector_phone"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textCollectorPhoneValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="220dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/textCollectorPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textCollectorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="160dp"
                android:text="@string/detail_collector_email"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textCollectorEmailValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="223dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/textCollectorEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>